--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,23 +1,19 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<head>
-	<meta charset="UTF-8">
-	<title>About</title>
-</head>
-<body>
+{% block title_block %}
+	About Rango
+{% endblock %}
+{% block body_block %}
 	<h1>Rango says...</h1>
 	<div>
 		here is the about page. <br />
 		<strong>This tutorial has been put together by Tiancheng Dong.</strong><br />
 	</div>
 	<div>
-		<a href="/rango/">Index</a><br />
 		<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 	</div>
 	<div>
 		<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
 	</div>
-</body>
-</html>
+{% endblock %}
