--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,32 +1,29 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Rango</title>
-</head>
-
-<body>
-	<div>
+{% block title_block %}
 	{% if category %}
-		<h1>{{ category.name }}</h1>
-		{% if pages %}
+		{{ category.name }}
+	{% else %}
+		Unknown Category
+	{% endif %}
+{% endblock %}
+
+{% block body_block %}
+	{% if category %}
+	<h1>{{ category.name }}</h1>
+	{% if pages %}
 		<ul>
-			{% for page in pages %}
-			<li><a href="{{ page.url }}">{{ page.title }}</a></li>
-			{% endfor %}
-		</ul>
-		{% else %}
+		{% for page in pages %}
+		<li><a href="{{ page.url }}">{{ page.title }}</a></li>
+	{% endfor %}
+	</ul>
+	{% else %}
 		<strong>No pages currently in category.</strong>
-		{% endif %}
+	{% endif %}
+
+		<a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
 	{% else %}
 		The specified category does not exist.
 	{% endif %}
-	</div>
-
-	<div>
-		<a href="/rango/">Index</a><br />
-	</div>
-</body>
-
-</html>
+{% endblock %}
