--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-{% load staticfiles %} <!-- New line -->
+{% block title_block %}
+	Homepage
+{% endblock %}
 
-<html lang="en">
-<head>
-	<title>Rango</title>
-</head>
-
-<body>
+{% block body_block %}
 	<h1>Rango says...</h1>
 	<div>
 		hey there partner! <br />
 		<strong>{{boldmessage}}</strong><br />
 	</div>
 
-	<h2>Most Liked Categories</h2>
 	<div>
+	<h2>Most Liked Categories</h2>
 	{% if categories %}
 		<ul>
 		{% for category in categories %}
@@ -44,11 +42,5 @@
 	{% endif %}
 	</div>
 
-	<div>
-		<a href="/rango/about/">About</a><br />
-		<img src="{% static 'images/rango.jpg' %}"
-			alt="Picture of Rango" />
-	</div>
-</body>
-
-</html>
+	<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+{% endblock %}
