--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -8,7 +8,11 @@
 {% block body_block %}
 	<h1>Rango says...</h1>
 	<div>
-		hey there partner! <br />
+	{% if user.is_authenticated %}
+		howdy {{ user.username }}!
+	{% else %}
+		hey there partner!
+	{% endif %} <br />
 		<strong>{{boldmessage}}</strong><br />
 	</div>
 
@@ -18,7 +22,7 @@
 		<ul>
 		{% for category in categories %}
 			<li>
-				<a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+				<a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a>
 			</li>
 		{% endfor %}
 		</ul>
