--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -9,6 +9,7 @@
 	<div>
 		here is the about page. <br />
 		<strong>This tutorial has been put together by Tiancheng Dong.</strong><br />
+		<p>Visits: {{ visits }}</p>
 	</div>
 	<div>
 		<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
