--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -6,9 +6,14 @@
 {% endblock %}
 
 {% block body_block %}
-	<h1>Add a Category</h1>
-	<div>
-		<form id="category_form" method="post" action="/rango/add_category/">
+<div class="jumbotron p-4">
+	<div class="container">
+	<h1 class="jumbotron-heading">Add a Category</h1>
+	</div>
+</div>
+	<div class="container">
+		<div class="row">
+			<form id="category_form" method="post" action="/rango/add_category/">
 			{% csrf_token %}
 			{% for hidden in form.hidden_fields %}
 				{{ hidden }}
@@ -18,7 +23,12 @@
 				{{ field.help_text }}
 				{{ field }}
 			{% endfor %}
-			<input type="submit" name="submit" value="Create Category" />
-		</form>
+			<br />
+			<button class="btn btn-primary" type="submit" name="submit">
+			Add Category
+		</button>
+		<div class="p-5"></div>
+			</form>
+		</div>
 	</div>
 {% endblock %}
